--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -7,10 +7,16 @@ on:
   pull_request:
     branches:
       - cicd-with-gke
+  workflow_dispatch:
+    inputs:
+      destroy:
+        description: "Set to true to run terraform destroy"
+        required: true
+        default: "false"
 
 env:
   TF_VERSION: 1.6.6
-  TF_VAR_project: ${{ secrets.GCP_PROJECT_ID }}   # Automatically maps to var.project
+  TF_VAR_project: ${{ secrets.GCP_PROJECT_ID }}
   TF_VAR_region: asia-south1
   TF_VAR_zone: asia-south1-a
 
@@ -54,12 +60,17 @@ jobs:
       - name: Terraform Validate
         run: terraform validate
 
-      # Terraform Plan (PR only)
+      # Terraform Plan (Pull Request only)
       - name: Terraform Plan
         if: github.event_name == 'pull_request'
         run: terraform plan -input=false
 
-      # Terraform Apply (Push only)
+      # Terraform Apply (Push to cicd-with-gke only)
       - name: Terraform Apply
         if: github.ref == 'refs/heads/cicd-with-gke' && github.event_name == 'push'
         run: terraform apply -auto-approve -input=false
+
+      # Terraform Destroy (Manual trigger only)
+      - name: Terraform Destroy
+        if: github.event_name == 'workflow_dispatch' && github.event.inputs.destroy == 'true'
+        run: terraform destroy -auto-approve -input=false
