--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -7,12 +7,6 @@ on:
   pull_request:
     branches:
       - cicd-with-gke
-  workflow_dispatch:
-    inputs:
-      destroy:
-        description: "Set to true to run terraform destroy"
-        required: true
-        default: "false"
 
 env:
   TF_VERSION: 1.6.6
@@ -60,17 +54,11 @@ jobs:
       - name: Terraform Validate
         run: terraform validate
 
-      # Terraform Plan (Pull Request only)
+      # Terraform Plan
       - name: Terraform Plan
-        if: github.event_name == 'pull_request' || github.event_name == 'push'
         run: terraform plan -input=false
 
-      # Terraform Apply (Push to cicd-with-gke only)
-      - name: Terraform Apply
-        if: github.ref == 'refs/heads/cicd-with-gke' && github.event_name == 'push'
-        run: terraform apply -auto-approve -input=false
-
-      # Terraform Destroy (Manual trigger only)
+      # Terraform Destroy (Runs on push to cicd-with-gke)
       - name: Terraform Destroy
-        if: github.event_name == 'workflow_dispatch' && github.event.inputs.destroy == 'true'
+        if: github.ref == 'refs/heads/cicd-with-gke' && github.event_name == 'push'
         run: terraform destroy -auto-approve -input=false
