--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -64,6 +64,6 @@ jobs:
         run: terraform apply -auto-approve -input=false
 
       # Terraform Destroy (Runs on push to cicd-with-gke)
-      #- name: Terraform Destroy
-        #if: github.ref == 'refs/heads/cicd-with-gke' && github.event_name == 'push'
-        #run: terraform destroy -auto-approve -input=false
+      - name: Terraform Destroy
+        if: github.ref == 'refs/heads/cicd-with-gke' && github.event_name == 'push'
+        run: terraform destroy -auto-approve -input=false
