--- a/.github/workflows/terraform-cicd.yml
+++ b/.github/workflows/terraform-cicd.yml
@@ -59,11 +59,11 @@ jobs:
         run: terraform plan -input=false
 
       # Terraform Apply (Push to cicd-with-gke only) 
-      #- name: Terraform Apply 
-        #if: github.ref == 'refs/heads/cicd-with-gke' && github.event_name == 'push' 
-        #run: terraform apply -auto-approve -input=false
+      - name: Terraform Apply 
+        if: github.ref == 'refs/heads/cicd-with-gke' && github.event_name == 'push' 
+        run: terraform apply -auto-approve -input=false
 
       # Terraform Destroy (Runs on push to cicd-with-gke)
-      - name: Terraform Destroy
-        if: github.ref == 'refs/heads/cicd-with-gke' && github.event_name == 'push'
-        run: terraform destroy -auto-approve -input=false
+      #- name: Terraform Destroy
+        #if: github.ref == 'refs/heads/cicd-with-gke' && github.event_name == 'push'
+        #run: terraform destroy -auto-approve -input=false
